--- a/fedora-asahi-remix.yaml
+++ b/fedora-asahi-remix.yaml
@@ -79,6 +79,10 @@
       import_tasks:
         file: tasks/ssh.yaml
 
+    - name: Install and configure river
+      import_tasks:
+        file: tasks/river.yaml
+
     - name: Install and configure zsh
       import_tasks:
         file: tasks/zsh.yaml
