--- a/tasks/river.yaml
+++ b/tasks/river.yaml
@@ -9,6 +9,7 @@
       - libinput-devel
       - NetworkManager-tui
       - pamixer
+      - pavucontrol
       - slurp
       - swayidle
       - swaylock
@@ -67,21 +68,6 @@
     name: keyd
     state: started
     enabled: yes
-
-- name: Download levee
-  git:
-    repo: https://git.sr.ht/~andreafeletto/levee
-    dest: /usr/local/src/levee
-    version: v0.1.4
-    recursive: true
-  register: levee_download
-
-- name: Compile and install levee
-  shell:
-    cmd: zig build --prefix /usr/local install
-  args:
-    chdir: /usr/local/src/levee
-  when: levee_download.changed
 
 - name: Create river configuration directory
   file:
