--- a/tasks/river.yaml
+++ b/tasks/river.yaml
@@ -7,6 +7,7 @@
       - fuzzel
       - grim
       - libinput-devel
+      - network-manager-applet
       - NetworkManager-tui
       - pamixer
       - pavucontrol
