--- a/Darwin.yaml
+++ b/Darwin.yaml
@@ -16,6 +16,7 @@
       community.general.homebrew_tap:
         name:
           - d12frosted/emacs-plus
+          - FelixKratz/formulae
           - homebrew/bundle
           - homebrew/cask-fonts
           - homebrew/cask-versions
