--- a/Darwin.yaml
+++ b/Darwin.yaml
@@ -190,6 +190,10 @@
       import_tasks:
         file: tasks/git.yaml
 
+    - name: Install and configure SketchyBar
+      import_tasks:
+        file: tasks/sketchybar.yaml
+
     - name: Install and configure SSH
       import_tasks:
         file: tasks/ssh.yaml
